Fix: Legend font and alignment issue

--- a/desktop/ui/css/theme.css
+++ b/desktop/ui/css/theme.css
@@ -436,14 +436,14 @@ QGroupBox {
     border: 1px solid rgba(128, 128, 128, 0.25);
     border-radius: 4px;
     margin-top: 1ex;
-    font: 10.6pt "HDWallet";
+    font: 11pt "HDWallet";
     text-transform: uppercase;
 }
 
 QGroupBox::title {
     subcontrol-origin: margin;
     left: 15px;
-    padding: 2px 3px 6px 3px;
+    padding: 0 3px 0 3px;
     background-color: rgb(16, 21, 27);
 }
 
